--- a/deploy/helm/templates/secret.yaml
+++ b/deploy/helm/templates/secret.yaml
@@ -11,5 +11,8 @@ stringData:
 {{- if .Values.secret.secretKey }}
   secretAccessKey: {{ .Values.secret.secretKey }}
 {{- end }}
+{{- if .Values.secret.iamRoleArn }}
+  iamRoleArn: {{ .Values.secret.iamRoleArn }}
+{{- end }}
   endpoint: {{ .Values.secret.endpoint }}
 {{- end -}}
