--- a/deploy/helm/templates/csi-s3.yaml
+++ b/deploy/helm/templates/csi-s3.yaml
@@ -91,6 +91,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
+            {{- if .Values.oidc.audience }}
+            - name: AWS_WEB_IDENTITY_TOKEN_FILE
+              value: /var/run/secrets/tokens/csi-s3-oidc-token
+            {{- end }}
           volumeMounts:
             - name: plugin-dir
               mountPath: /csi
@@ -104,6 +108,10 @@ spec:
               mountPath: /dev/fuse
             - name: systemd-control
               mountPath: /run/systemd
+            {{- if .Values.oidc.audience }}
+            - name: csi-s3-oidc-token
+              mountPath: /var/run/secrets/tokens
+            {{- end }}
       volumes:
         - name: registration-dir
           hostPath:
@@ -128,3 +136,13 @@ spec:
           hostPath:
             path: /run/systemd
             type: DirectoryOrCreate
+        {{- if .Values.oidc.audience }}
+        - name: csi-s3-oidc-token
+          projected:
+            defaultMode: 420
+            sources:
+            - serviceAccountToken:
+                audience: {{ .Values.oidc.audience }}
+                expirationSeconds: 7200
+                path: csi-s3-oidc-token
+        {{- end }}
